#773-Fixed color contrast error by changing styles. This error was notified by Wave extension

--- a/WebUI/war/css/styles.css
+++ b/WebUI/war/css/styles.css
@@ -1652,6 +1652,7 @@ input[type =
 #perc-ui-permission-usernamefield
 {
     width:284px;
+    color:#000000 !important;
 }
 
 #perc-ui-permission-plusbutton
